🐛 resolve <code /> text legibility (final)

--- a/src/styles/components/_codeSnippet.scss
+++ b/src/styles/components/_codeSnippet.scss
@@ -24,7 +24,7 @@
     @include mobile-view {
       padding-right: 30px !important;
       float: left;
-      font-size: 0.65em !important;
+      font-size: 0.61em !important;
     }
     @include desktop-view {
       font-size: 12px !important;
